# ChangeLog for net-analyzer/gnome-nettool
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.121 2013/05/04 11:53:38 pacho Exp $

*gnome-nettool-3.8.0 (04 May 2013)

  04 May 2013; Pacho Ramos <pacho@gentoo.org> +gnome-nettool-3.8.0.ebuild:
  Version bump

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-nettool-3.0.1.ebuild:
  Clean up old revision.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> gnome-nettool-2.32.0.ebuild,
  gnome-nettool-3.0.1.ebuild, gnome-nettool-3.2.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-nettool-3.2.0.ebuild:
  Spelling.

*gnome-nettool-3.2.0 (15 Apr 2012)

  15 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-nettool-3.0.0-r1.ebuild, +gnome-nettool-3.2.0.ebuild,
  +files/gnome-nettool-3.2.0-extra-path.patch:
  Bump, adds support for nmap and iputils. Fix launching utilities in /sbin and
  /usr/sbin. Drop old.

*gnome-nettool-3.0.1 (05 Jan 2012)

  05 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-nettool-3.0.0-r1.ebuild, +gnome-nettool-3.0.1.ebuild:
  Version bump. Changes relative to 3.0.0-r1: UI and portability fixes. Add
  some missing dependencies.

*gnome-nettool-3.0.0-r1 (07 Nov 2011)

  07 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gnome-nettool-3.0.0-r1.ebuild:
  Bump to 3.0.0 from the gnome overlay. Notable changes: uses gsettings and
  gtk3.

  27 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -gnome-nettool-2.30.0.ebuild, gnome-nettool-2.32.0.ebuild:
  Fix slot-deps on gnome libs, remove old

  22 Mar 2011; Brent Baude <ranger@gentoo.org> gnome-nettool-2.32.0.ebuild:
  Marking gnome-nettool-2.32.0 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gnome-nettool-2.32.0.ebuild:
  ppc64 stable wrt #353436
