@@ -6,15 +6,17 @@ AUX gnome-nettool-3.2.0-extra-path.patch 2315 SHA256 2943405287743ded1d7e5674dfe
 DIST gnome-nettool-2.32.0.tar.bz2 647036 SHA256 8c70f85952760170114b2fa4be3ccaa3fc6298f802bacda2503ed482b8a0539c
 DIST gnome-nettool-3.2.0.tar.xz 585556 SHA256 9888202f1c13f98fd26b417468e6f2345f885557f3a98fb365eeea52d792bf79 SHA512 26726a3be6f9d28075ea231d8363893fb26a24e490c9fd23cb8ca34e9d223cf42e93dd9a6d9d864fd91b0f3a902180b3eca386bea48a9b06ac36311e30812e3a WHIRLPOOL 9c0f727cda715b22f8d54a4b334b96cf05ddcd086f2e5126f087fb8911c235e5a0ef7ee593bdc125cede628b8310eef1af55dc9f1e8d4423c938bb69a4f5697a
 DIST gnome-nettool-3.8.0.tar.xz 589236 SHA256 3a3480dcef181684f3e37d779cfd43f9b21920412aff78501de1695faf194a28 SHA512 2c328e3c6bda9fdb7e582fc40797a91e2ea070dcea3f826ba4e3eebef80a45d2eb10f92d07f81135b635c670bfcbbc9b2626e2ac935ace0bbb11efd19571f79f WHIRLPOOL 010707bacea92316c518e2c310386c4ebbc8f6fda7df4b35808dad02607c1b299bbc562d1a430bba7dcf9d877394ebdb521f2b532c6e626dc819e21337fd0956
+DIST gnome-nettool-3.8.1.tar.xz 589024 SHA256 f0a4510d9fe5eae4c91b63ade9848992b2795108e76eff7f51dc3decf7df2cb1 SHA512 c1c90fa727ebbf21442c4d0f5f4e98acf91fdd68a476f5f378167f92c3d7938ef33598525b62b838dc9b485abeb40171bdffb0fe3cb060fd3982db013a30bbed WHIRLPOOL fe63ac5972b04046b97bdc33a31461f939dff5bd71d1f3b9b76bbd0bc2925a6622b0a938de28b7769f1877a69ccfb77b17c71df12b86edf669e8b32dd9125560
 EBUILD gnome-nettool-2.32.0.ebuild 1252 SHA256 6f6f0072011f2e052f00c938ab4afd2ba4e6433e3add676af0c03f0459dda3fc SHA512 aebb003a715c4edfc6dfd0e755a13b16e5815b463ed4819459b3f4368016e3659fddb13eb7e92780b4299abc50fec2eaf7281224c0bf5b2e9ec296046585f335 WHIRLPOOL 8b452969754ca9cafbc47704bfb5b54785602f7e195993f39657125a5361e0de59608b602cf2c1131d11633074010e17e87f633e6e1a43b4bfd1096af9914f49
 EBUILD gnome-nettool-3.2.0.ebuild 1565 SHA256 e316e9cf9c8d350e11df9adf806afb75ce0ddf9a6bd4aceaa57f8fe69e63d8dc SHA512 1ed6cde745ccf599708929523d678b281d74f79770dc374821752e30d40efa232304d66547efdd9d7cbf6d9975a9cec2ea214db0d24b8a57f983264773bf704a WHIRLPOOL 61bfe4341ff16f712c75523842a01115d1e13c360550e0113ccc6d105b4fb7491a29de06b91521436fca7b1ca67d51c0047475718a43fc81d343afa51031bd31
 EBUILD gnome-nettool-3.8.0.ebuild 1328 SHA256 d6f23266320690768ad73bf48b393cc89ef3e08c07041ea6328f3225dc4c7090 SHA512 10ad4a981ccfba9cabee55603a32be8fe49e9e35d12e075977e376b4db5f607b189b5c877cd8a6b8084e6c0864b6947af3dd2198fd866029dbff328c3ef13c90 WHIRLPOOL 3b450167d229c9f022ff0a56ad4c94aa05184eb1a51ea365dd13d77c4d50a7aab51faffc68796062ab538b9249b65f8c19f2eb1dad866b2db331f3624e5b66fd
-MISC ChangeLog 16256 SHA256 c1cf0ad6d7f0309e17dd67bb20cb1a1cc6dde525fd48682c412141575cb8339a SHA512 e9e05877970ddfccf60e09e07e537f75ef514ca82653c4e71ecaa3133116019c7ffe6fc89bf8f8d87b6f2310b95154a71ab8cd1496f87fd3915fa1f2fea63f99 WHIRLPOOL 8cd22738ed79a06323084de350c8ce0710628abf219e059d8a62a7b02ce6c661be65ca82df9b1359c6725b489b85bae30c95c81234fa8a90180c32cb5c8d6ad9
+EBUILD gnome-nettool-3.8.1.ebuild 1116 SHA256 2b12a52e58825d96d4eb6fac22b9588c150ba114137e08ef6669a4c85199037b SHA512 0c1c21dbb9f0d49a924c1b3d0146d66b75a885fb9cc5204a23a4c789786dcfcc6d8ee6f4e9f25fe888d536f322b45b686220c30a2d2fc2e7a72ea125155307af WHIRLPOOL 37bbd835602bf8ee762b3a95ab0df8eff1fb9bd039762fddda4b6a8596803c0b30b530ec6e77dab5a80eb0115eb4c04a3e2bb90fde335c2ab3f09cb6362b01dc
+MISC ChangeLog 16383 SHA256 f3da8d3016d3b84a3e097fb0597d89651f8a6691242f4d7d78129fccdb4b3ae3 SHA512 a6272a2e8dfe706ad7e4d53c5408a871f3f23e796177b44dc143dfa01fb8264a73091e735fa77bc7c6dfd59bb9e2dad1b437a7f87102af2eff3df122da62ce12 WHIRLPOOL 0eb60f6f051667360dd07532c0862a556e200a07348b05964342782b2776eb9a366769f13a5e313573e6fdc030ca762d5e2266fa86e95e6fe1ab035ad41a1ee5
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGE9sMACgkQCaWpQKGI+9QSFwCeLkKHlip+6Zd/mD1I62Lifyc4
-R14An1kqtOnrQl3gU9c7KRLaUpkDHm+6
-=w9AQ
+iEYEAREIAAYFAlGppbYACgkQCaWpQKGI+9ScfgCggpM1FhipA58i+FjRP9nj5otS
+YBEAnRnWuXEWR/jUUddO/cxwOK9/FlSv
+=eMh4
 -----END PGP SIGNATURE-----
