@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/gnome-nettool
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.121 2013/05/04 11:53:38 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.122 2013/06/01 07:41:41 pacho Exp $
+
+*gnome-nettool-3.8.1 (01 Jun 2013)
+
+  01 Jun 2013; Pacho Ramos <pacho@gentoo.org> +gnome-nettool-3.8.1.ebuild:
+  Version bump
 
 *gnome-nettool-3.8.0 (04 May 2013)
 
